style: fix nav bar gap

--- a/styles/components/_nav-bar.scss
+++ b/styles/components/_nav-bar.scss
@@ -89,7 +89,7 @@
 
       @media (max-width: 650px) {
         position: absolute;
-        top: -65rem;;
+        top: -65rem;
         transition: top 1s;
         margin-top: 11rem;
         flex-direction: column;
@@ -101,7 +101,7 @@
       }
 
       &.is-active {
-        top: 0;
+        top: -2px;
       }
 
       li {
